// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creation avoids creating duplicated articles and adds replyRequests automatically 1`] = `
Object {
  "lastRequestedAt": "2017-01-28T08:45:57.011Z",
  "references": Array [
    Object {
      "type": "LINE",
    },
    Object {
      "appId": "foo",
      "createdAt": "2017-01-28T08:45:57.011Z",
      "type": "LINE",
      "userId": "test",
    },
  ],
  "replyRequestCount": 2,
  "text": "I think I am I exist",
  "updatedAt": "2017-01-28T08:45:57.011Z",
}
`;

exports[`creation creates articles and a reply request and fills in URLs 1`] = `
Object {
  "appId": "foo",
  "articleCategories": Array [],
  "articleReplies": Array [],
  "articleType": "TEXT",
  "attachmentHash": "",
  "attachmentUrl": "",
  "createdAt": "2017-01-28T08:45:57.011Z",
  "hyperlinks": Array [
    Object {
      "normalizedUrl": "http://foo.com/article/1",
      "summary": "FOO article content",
      "title": "FOO title",
      "url": "http://foo.com/article/1",
    },
  ],
  "lastRequestedAt": "2017-01-28T08:45:57.011Z",
  "normalArticleCategoryCount": 0,
  "normalArticleReplyCount": 0,
  "references": Array [
    Object {
      "appId": "foo",
      "createdAt": "2017-01-28T08:45:57.011Z",
      "type": "LINE",
      "userId": "test",
    },
  ],
  "replyRequestCount": 1,
  "tags": Array [],
  "text": "FOO FOO http://foo.com/article/1",
  "updatedAt": "2017-01-28T08:45:57.011Z",
  "userId": "test",
}
`;

exports[`fails with an invalid app id 1`] = `
Array [
  [GraphQLError: userId is set, but x-app-id or x-app-secret is not set accordingly.],
]
`;

exports[`fails with an invalid user id 1`] = `
Array [
  [GraphQLError: userId is not set via query string.],
]
`;
